# hdx-scraper-wfp-rainfall

./: .pre-commit-config.yaml  CLAUDE.md  README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/workflows/: publish.yaml  run-python-script.yaml
src/hdx/scraper/wfp_rainfall/: __main__.py  pipeline.py  wfp_rainfall.py
src/hdx/scraper/wfp_rainfall/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_wfp_rainfall.py
tests/fixtures/: hdx_hapi_rainfall_global_1yr.csv  hdx_hapi_rainfall_global_2025.csv  hdx_hapi_rainfall_global_2025_dekad.csv  hdx_hapi_rainfall_global_30_day.csv  hdx_hapi_rainfall_moz_2024.csv
tests/fixtures/input/: dataset-afg-rainfall-subnational.json  dataset-moz-rainfall-subnational.json  download-afg-rainfall-adm1-5ytd.csv  download-global-pcode-lengths.csv  download-global-pcodes-adm-1-2.csv  download-moz-rainfall-adm2-5ytd.csv
