#########################
# Project Configuration #
#########################

# Project name and version needed to run tests

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-wfp-rainfall"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-scraper>= 2.6.5",
  "hdx-python-api>= 6.5.2",
  "hdx-python-country>= 3.9.8",
  "hdx-python-utilities>= 3.9.5",
  "kalendar",
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.wfp_rainfall.__main__:main"
